Add messaging test

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 						<p>
 								Some Game-Elements
 						</p>
+						<table>
+								<thead>
+										<tr><th>Name</th><th>id</th><th><th></th></th><th>got:</th></tr>
+								</thead>
+								<tbody id="participantList">
+								</tbody>
+						</table>
 				</div>
 				<script src='https://meet.jit.si/external_api.js'></script>
 				<script src='fajrofloro.js'></script>
