Improved test environment
We are still in communication testing.
Additionally I set the url to meet.jit.si as they may have more capacity.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 						<p>
 								Some Game-Elements
 						</p>
+						<button id="reloadbutton">Reload Jitsi</button>
 						<table>
 								<thead>
 										<tr><th>Name</th><th>id</th><th><th></th></th><th>got:</th></tr>
@@ -18,6 +19,7 @@
 								<tbody id="participantList">
 								</tbody>
 						</table>
+						<div id="debug" ></div>
 				</div>
 				<script src='https://meet.jit.si/external_api.js'></script>
 				<script src='fajrofloro.js'></script>
